# auto-investor

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker.yml
src/auto_investor/: __init__.py  __main__.py  config.py  indicators.py
src/auto_investor/agents/: __init__.py
src/auto_investor/clients/: __init__.py  reddit.py
src/auto_investor/dashboard/: __init__.py
src/auto_investor/dashboard/static/: style.css
src/auto_investor/dashboard/templates/: index.html
src/auto_investor/data/: __init__.py
src/auto_investor/execution/: __init__.py
src/auto_investor/models/: __init__.py
src/auto_investor/risk/: __init__.py
tests/: __init__.py  test_risk.py
unraid/: auto-investor.xml
