[project]
name = "auto-investor"
version = "0.1.5"
description = "AI-driven automated trading bot using Claude + Alpaca"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.33.0",
    "anthropic>=0.42.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.0",
    "apscheduler>=3.10.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "pytz>=2025.2",
    "fastapi>=0.128.6",
    "uvicorn[standard]>=0.40.0",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_investor"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
